--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -53,7 +53,6 @@ form {
 	display:		inline;
 }
 
-
 #dhPageTopMessage {
 	position:		relative;
 	left:			0px;
@@ -87,6 +86,22 @@ input.dh-text-input {
 	position:		relative;
 	left:			0px;
 	top:			0px;
+}
+
+.dh-page-title {
+}
+
+.dh-page-title-container {
+	width:			100%;
+	position:		relative;
+	margin-bottom:	8px;
+}
+
+.dh-page-options {
+	position:		absolute;
+	right:			0;
+	top:			0;
+	text-align:		right;
 }
 
 #dhWebServices {
@@ -236,6 +251,10 @@ div.dh-notification {
 
 .dh-popup .dh-content .dh-title {
 	position:			relative;
+}
+
+.dh-shiny-box {
+	margin-bottom:		10px;
 }
 
 .dh-shiny-box-content {
