--- a/dumbhippo/trunk/server/web/css3/main-positions.css
+++ b/dumbhippo/trunk/server/web/css3/main-positions.css
@@ -7,3 +7,23 @@
 .dh-song-with-art .dh-song-info {
 	width:				124px;
 }
+
+#dhMugshotIntro {
+    position:        relative;
+    top:             -6px;
+    left:            -6px;
+    margin-right:    -16px;  
+    margin-bottom:   -12px;
+}
+
+#dhMugshotIntro td {
+    padding-top:     2px;
+    padding-right:   8px;
+    padding-left:    8px;
+    padding-bottom:  0px;
+}
+
+#dhMugshotIntro .dh-button {
+    position:        relative;
+    top:             7px;  
+}
