--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -302,148 +302,14 @@ div.dh-async-action-link-complete {
 	padding:			0px;
 }
 
-.dh-stacked-block-outer {
-	position:			relative;		
-	/* for opacity to work in IE you have to set width or height, or use position absolute */
-	width:				480px;
-	overflow:			hidden;
-	/* don't add a margin here or it makes the animation ugly when blocks move 
-	 * since we modify the height of this block in that animation but not the margin
-	 */
-}		
-.dh-stacked-block {
-	position:			relative;
-	text-align:			left;
-	/* for opacity to work in IE you have to set width or height, or use position absolute */
-	width:				480px;
+.dh-stacker-block {
+	margin:				4px 0px;
 }
-.dh-stacked-block .dh-heading {
-	position:			relative;
-	font-size:			11px;
-	margin:				2px;
+
+.dh-stacker-block-grey1 {
+	background-color:	#EDEDED;
 }
-.dh-stacked-block .dh-title {
-	font-size:			11px;
-}
-.dh-stacked-block .dh-content-padding {
-	position:			relative;
-	width:				480px;			
-}
-.dh-stacked-block .dh-content {
-	position:			relative;
-	margin:				7px;
-	width:				466px;
-}
-.dh-stacked-block .dh-content-padding {
-	background-color: 	white;
-	color:				black;	
-}		
-.dh-stacked-block .dh-heading a:visited, .dh-stacked-block .dh-heading a {
-	color:				white;
-}
-.dh-stacked-block .dh-hush {
-	position:			absolute;
-	right:				2px;
-	top:				2px;
-	font-weight:		bold;
-	font-size:			10px;
-	background-color: 	inherit; /* so it covers up any text below it */
-	cursor:			pointer;
-}
-.dh-stacked-block-music-person {
-	background-color:	#36AAE8;
-	color:				white;		
-}
-.dh-stacked-block-post {
-	background-color:	#F16D1C;
-	color:				white;
-}
-.dh-stacked-block-group-chat {
-	background-color:	#84569B;
-	color:				white;	
-}
-.dh-stacked-block-group-member {
-	background-color:	#84569B;
-	color:				white;	
-}	
-.dh-stacked-block-account-update {
-    background-color:   #666666;
-    color:              white; 
-}
-.dh-stacked-block .dh-left-column {
-	position:	relative;
-	float:      left;
-	display:    block;
-	width: 		350px;
-}
-.dh-stacked-block .dh-right-column {
-	position:	relative;
-	float:      right;
-	display:    block;
-	top:		0px;
-	right:		0px;
-	width:		100px;
-}
-.dh-stacked-block .dh-right-column .dh-from {
-	position:	relative;
-	width:		100px;
-	text-align:	center;
-	font-size:	10px;
-	font-style: italic;
-}
-.dh-stacked-block .dh-right-column .dh-details {
-	position:	relative;
-	width:		100px;
-	font-size:	10px;
-}
-.dh-stacked-block .dh-right-column .dh-details .dh-pipe {
-	margin-left:	3px;
-	margin-right:	3px;
-}
-.dh-stacked-block .dh-right-column .dh-details div {
-	float:		right;
-}
-.dh-stacked-block .dh-left-column .dh-description {
-	font-size: 	10px;
-}
-.dh-stacked-block .dh-left-column .dh-photos {
-}
-.dh-stacked-block .dh-left-column .dh-photos .dh-photo {
-	float:      left;
-	height:     75px;
-	width:      75px;
-	margin:     3px 3px 0px 0px;
-            overflow:   hidden;
-}		
-.dh-stacked-block .dh-left-column .dh-messages {
-	font-size: 	10px;
-	font-style: italic;
-}
-.dh-stacked-block-music-person .dh-songs .dh-song-list {
-	padding: 		0;
-	margin: 		5px;
-}
-.dh-stacked-block-music-person .dh-songs .dh-song {
-	list-style: 		none;
-	font-size:		12px;
-}
-.dh-stacked-block-music-person .dh-songs .dh-song-artist {
-	font-size:		12px;
-}
-.dh-stacked-block-music-person .dh-songs .dh-song-title {
-	font-size:		12px;
-}
-.dh-stacked-block-group-chat .dh-group-chat-messages .dh-group-chat-message {
-	font-size:		10px;
-	font-style: italic;
-}
-.dh-stacked-block-group-chat .dh-group-chat-messages .dh-group-chat-message .dh-group-chat-message-author {
-	font-size:		10px;
-}
-.dh-stacked-block-post .dh-post-chat-messages .dh-post-chat-message {
-	font-size: 	10px;
-	font-style: italic;
-}
-.dh-stacked-block-post .dh-post-chat-messages .dh-post-chat-message .dh-post-chat-message-author {
-	font-size: 	10px;
+
+.dh-stacker-block-grey2 {
+	background-color:	#F3F3F3;
 }
