Convert nascent WebBlock class into server BlockView and some initial subclasses.
Modify Stacker getBlocks to return a list of BlockView.  Update callers.

Convert block tag to display a BlockView; fill it out a little more.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -260,3 +260,13 @@ div.dh-notification {
 .dh-shiny-box-content {
 	padding:			10px 10px 0px 10px;
 }
+
+.dh-stacker-block {
+	position:			relative;
+}
+
+.dh-stacker-block-right {	
+	position:			absolute;
+	right:				0;
+	top:				0;
+}
