--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -296,6 +296,8 @@ div.dh-async-action-link-complete {
 
 .dh-stacker-container {
 	position:			relative;
+	display:            block;
+	clear:              both;
 	background-color:	white;
 	overflow:			hidden;
 	margin:				0px;
