Rework how we do right-aligned elements inside shinybox to use full width tables; this currently breaks IE but hopefully a negative margin approach in a -iefixes will unbreak it.
Add close button to stacks, and rework stacker to use generated element IDs instead of
grovelling DOM.

--- a/dumbhippo/trunk/server/web/css3/home-positions.css
+++ b/dumbhippo/trunk/server/web/css3/home-positions.css
@@ -11,6 +11,8 @@
 .dh-person-header .dh-person-info {
     position:       relative;
     width:          100%;
+    margin-top:		8px;
+    /* FIXME - needs to be moved into -iefixes */
     margin-right:   -20px;
 }  
 
