Create ChatMessageView class which contains a PersonView.  Use this in PostBlockView/GroupChatBlockView.
Add chat message display.

Positioning fixes, add tag which can look up -iefixes too.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -61,6 +61,7 @@ form {
 }
 
 #dhSearchBox {
+	padding-top:	5px;
 }
 
 #dhSearchForm {
@@ -302,5 +303,5 @@ div.dh-notification {
 }
 
 .dh-stacker-block-content-controls {
-	margin-right:		5px;
+	padding-right:		5px;
 }
