Rename home to person; implement home by redirection to person. Tagify person page.  Implement history page.

--- a/dumbhippo/trunk/server/web/css3/person.css
+++ b/dumbhippo/trunk/server/web/css3/person.css
@@ -1,6 +1,5 @@
 @CHARSET "UTF-8";
-@IMPORT url("site.css");
-@IMPORT url("home-positions.css");
+@IMPORT url("person-positions.css");
 
 .dh-person-header-name {
 	font-size:		14px;
