--- a/dumbhippo/trunk/server/web/css3/main.css
+++ b/dumbhippo/trunk/server/web/css3/main.css
@@ -1,5 +1,5 @@
 @CHARSET "UTF-8";
-@IMPORT url("site.css");
+@IMPORT url("person.css");
 @IMPORT url("main-positions.css");
 
 .dh-logo-link, #dhMainLogoLinks {
