--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -305,3 +305,72 @@ div.dh-notification {
 .dh-stacker-block-content-controls {
 	padding-right:		5px;
 }
+
+.dh-thumbnail-box-border, .dh-rss-box-border {
+	position:			relative;
+	width:				478px;
+	margin-top:			10px;
+	margin-bottom:		10px;
+	/* FIXME this should be margin on the inner box, not padding here, or the width will be broken */
+	padding:			1px;
+}
+
+.dh-thumbnail-box, .dh-rss-box {
+	position:				relative;
+	padding:				0px;
+	margin:					0px;
+}
+
+.dh-thumbnail-meta, .dh-rss-meta {
+	position:				relative;
+	height:					26px;
+	/* FIXME this should be margin on an inner box, not padding here, or the width will be broken */
+	padding-top:				6px;
+}
+
+.dh-thumbnail-service, .dh-rss-service {
+	position:				absolute;
+	left:                   10px;
+}
+
+.dh-thumbnail-status, .dh-rss-status {
+	position:			absolute;
+	right:				10px;
+}
+
+.dh-thumbnail-photos-border {
+	position:				relative;
+	/* 478px is the whole photos box width, minus 2px more for the border */
+	width:					476px;
+	overflow:				hidden;
+}
+
+.dh-thumbnail-photos {
+	margin:					10px;
+	margin-top:				0px;
+	/* 
+	 * The thumbs are each 75px + 20px right margin = 95px * 5 = 475px
+	 * So we need to be at least that wide. It's OK to be larger than the
+	 * page width by up to the size of the right margin, since it will just
+	 * get chopped.
+	 */
+	width:					496px;
+}
+
+.dh-thumbnail-photo {
+	float:				left;
+	margin-right:		20px;
+	width:				75px;
+	padding:			0px;
+}
+
+.dh-thumbnail-photo img {
+	border:				none;
+	margin:				0px;
+}
+
+.dh-thumbnail-title {
+	width:				75px;
+	overflow:			hidden;
+	text-align:			center;
+}
