Position page container absolutely instead of via table. Set it to be a computed width in IE.  Force all children to width: 100% in order to preserve width in IE.

--- a/dumbhippo/trunk/server/web/css3/site-iefixes.css
+++ b/dumbhippo/trunk/server/web/css3/site-iefixes.css
@@ -2,13 +2,15 @@
 	margin-top:		3px;
 }
 
+#dhPage {
+	width:			expression(document.body.clientWidth-20);
+}
+
 .dh-stacker-block-right {
 }
 
 .dh-stacker-block-header {
-	width:				98%;
 }
 
 .dh-stacker-block-content-container {
-	width:				98%;
 }
