Add paging through the contacts' stacks and sort the stacks by the latest activity time. Make sure that the block ids used for div names are unique on a page.

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -101,6 +101,11 @@ img {
     color:              blue; /* this looks better than text-decoration: underline; */
 }
 
+.dh-more {
+    font-size:       12px;
+    font-weight:     bold;  
+}
+
 .dh-more-count a:link, .dh-more-count a:visited {
     color:              black;  
 }
