Fill out music person block view with more songs.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -280,6 +280,9 @@ div.dh-notification {
 .dh-stacker-block {
 }
 
+.dh-stacker-block-title {
+}
+
 .dh-stacker-block-bottom-padding {
 	height:				4px;
 }
