Initial work for displaying person's mugshot and stacker on /person.

--- a/dumbhippo/trunk/server/web/css3/person-positions.css
+++ b/dumbhippo/trunk/server/web/css3/person-positions.css
@@ -11,3 +11,7 @@ div.dh-person-header {
 .dh-person-header .dh-person-info {
     width:          100%;
 }
+
+.dh-person-stacker-header {
+    padding:         8px;
+}
