Add colors for group notifications, add preparatory work for from display.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -241,7 +241,8 @@ div.dh-notification {
 	margin-left:		20px;
 }
 
-.dh-stacker-block-time {
+.dh-stacker-block-right {
+	text-align:			right;
 	margin-right:		5px;
 }
 
