Add paging to the overview page, collapse and expand mugshot and stacker frames depending on which one of them is being paged.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -348,6 +348,11 @@ div.dh-notification {
 	text-align:			center;
 }
 
-.dh-more {
+.dh-more, .dh-back {
+    margin-top:         5px;
     margin-bottom:      5px;
+}
+
+.dh-person-info .dh-back {
+    margin-top:         30px;
 }
