--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -64,7 +64,7 @@ img {
     color:              blue; /* this looks better than text-decoration: underline; */
 }
 
-.dh-more {
+.dh-more, .dh-back {
     font-size:       12px;
     font-weight:     bold;  
 }
