Fix-up tags and positions for the main page.

--- a/dumbhippo/trunk/server/web/css3/main-positions.css
+++ b/dumbhippo/trunk/server/web/css3/main-positions.css
@@ -10,10 +10,8 @@
 
 #dhMugshotIntro {
     position:        relative;
-    top:             -6px;
-    left:            -6px;
-    margin-right:    -16px;  
-    margin-bottom:   -12px;
+    margin-top:      3px;  
+    margin-bottom:   -3px;
 }
 
 #dhMugshotIntro td {
