--- a/dumbhippo/trunk/server/web/css3/download.css
+++ b/dumbhippo/trunk/server/web/css3/download.css
@@ -11,6 +11,10 @@
 	font-size:			16px;
 }
 
+.dh-download-terms {
+	font-size:		16px;	
+}
+
 .dh-download-subheader {
 	font-size:			18px;
 	font-weight:		bold;
@@ -48,4 +52,10 @@
 
 .dh-download-faq-q {
 	font-weight:		bold;
+}
+
+.dh-accept-terms-box-warning {
+	background-color:	#ffffcc;
+	border:				1px solid #cc0033;
+	-moz-border-radius:	5px;
 }
