Update header to match newer mockup.

--- a/dumbhippo/trunk/server/web/css3/header-positions.css
+++ b/dumbhippo/trunk/server/web/css3/header-positions.css
@@ -10,8 +10,16 @@
 	width:			100%;
 }
 
+#dhPageHeaderWelcome {
+	margin-right:	8px;
+}
+
+#dhPageHeaderLeftControlsArea {
+	margin-left:	5px;
+	margin-bottom:	18px;
+}
+
 #dhPageHeaderInner {
-	width:			100%;
 }
 
 #dhPageHeaderLeft {
