--- a/dumbhippo/trunk/server/web/css3/header.css
+++ b/dumbhippo/trunk/server/web/css3/header.css
@@ -4,6 +4,10 @@
 #dhPageHeader3 {
 }
 
+#dhPageHeaderLeftControls {
+	background: url("/images3/header_middle.png") top left repeat-x;
+}
+
 #dhPageHeaderInner {
 	background: url("/images3/header_middle.png") top left repeat-x;
 }
@@ -33,12 +37,18 @@
 	color:				#aaaaaa;
 }
 
-#dhHeaderOptions3, #dhHeaderLinks {
+#dhPageHeaderWelcome {
+	font-size:			14px;
+	font-weight:		bold;
+	color:				white;
+}
+
+#dhHeaderOptions3, #dhHeaderLinks, #dhPageHeaderWelcomeOptions {
 	font-size:			12px;
 	font-weight:		bold;
 	color:				white;
 }
 
-#dhHeaderOptions3 a:link, #dhHeaderOptions3 a:visited, #dhHeaderLinks a:link, #dhHeaderLinks a:visited {
+#dhPageHeaderLeftControls a:link, #dhPageHeaderLeftControls a:visited, #dhHeaderOptions3 a:link, #dhHeaderOptions3 a:visited, #dhHeaderLinks a:link, #dhHeaderLinks a:visited {
 	color:				white;
 }
