--- a/dumbhippo/trunk/server/web/css3/main-positions.css
+++ b/dumbhippo/trunk/server/web/css3/main-positions.css
@@ -1,27 +1,22 @@
 @CHARSET "UTF-8";
 
-.dh-song-with-art {
-	width:				100%;
-}
-
-.dh-song-with-art .dh-song-info {
-	width:				124px;
-}
-
 #dhMugshotIntro {
     position:        relative;
-    margin-top:      3px;  
-    margin-bottom:   -3px;
+    margin-top:      10px;  
+    margin-bottom:   10px;
+    margin-left:     15px;
+    margin-right:    15px;
 }
 
-#dhMugshotIntro td {
-    padding-top:     2px;
-    padding-right:   8px;
-    padding-left:    8px;
-    padding-bottom:  0px;
+#dhMugshotIntro *, .dh-header {
+    margin-top:     10px;
+}
+
+#dhMugshotIntro .dh-intro-options {
+    margin-top:     0px;
 }
 
 #dhMugshotIntro .dh-button {
-    position:        relative;
-    top:             7px;  
+   position:        relative;
+   top:             7px;  
 }
