postBlock.tag chatPreview.tag: Factor chatting out of the post block groupChatBlock.tag blog.tag: Add a first cut at "group chat" blocks actionLinkChat.tag: Allow setting the link text active-groups.css: Fix block ids so the right block expands on mouseover. GroupView: add getChattingUserCount Room: Use GUID form not jabber-id form in presence location /rooms/<blah> EntityTag: Small cleanup

--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -303,6 +303,10 @@ div.dh-async-action-link-complete {
 	font-size:			12px;
 }
 
+.dh-stacker-block-title .dh-action-link {
+	text-decoration:	underline;
+}
+
 .dh-stacker-block-title-title {
 }
 
