Fix header width.
Some style cleanups to Facebook block.

Display from source for Feed posts too.

--- a/dumbhippo/trunk/server/web/css3/site-positions.css
+++ b/dumbhippo/trunk/server/web/css3/site-positions.css
@@ -302,6 +302,10 @@ div.dh-notification {
 	width:				100%;
 }
 
+.dh-stacker-block-title-facebook-events {
+	margin-left:		5px;
+}
+
 .dh-thumbnail-box-border, .dh-rss-box-border {
 	position:			relative;
 	width:				478px;
