--- a/dumbhippo/trunk/server/web/css3/site.css
+++ b/dumbhippo/trunk/server/web/css3/site.css
@@ -367,6 +367,11 @@ div.dh-async-action-link-complete {
 .dh-stacker-block-title-group-member-name {
 }
 
+.dh-stacker-block-title-facebook-events {
+	font-size:			14px;
+	font-weight:		bold;
+}
+
 .dh-where-at-label {
 	font-weight: 		bold;
 	color:				black;
